[gd_scene load_steps=12 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_9.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dppvvdnlx00q7" path="res://Art/Level/Level_Sjg/248.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dckbrh6t3mmyn" path="res://Art/Level/Level_9/122.png" id="4"]
[ext_resource type="Texture2D" uid="uid://coao5641ej6aw" path="res://Art/Level/Level_9/227.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(5025.75, 705)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(793, 1754)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1171, 1754.5)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(40, 1743)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1211, 1730.5)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(721.75, 1420)
script = null

[node name="Level_9" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="floor" type="CollisionShape2D" parent="wall" index="1"]
position = Vector2(2458.88, 751.5)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1496.5, -370)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2833.5, -375.25)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(3520, -347)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(5207.5, -367.25)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3178.13, -211)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="248" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(717, 248)
texture = ExtResource( "3" )

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="122" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2478, 365)
texture = ExtResource( "4" )

[node name="227" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(2344, 553)
texture = ExtResource( "5" )

[node name="exit" parent="." index="10"]
position = Vector2(4371, 320)
metadata/_edit_lock_ = true
